[gd_scene load_steps=23 format=3 uid="uid://cgrdyq0t21q7d"]

[ext_resource type="Script" path="res://boss1.gd" id="1_51yxo"]
[ext_resource type="Texture2D" uid="uid://cm0xbt6fw0rd5" path="res://Sunny-land-files/Graphical Assets/spritesheets/enemy-deadth.png" id="2_wuod7"]
[ext_resource type="Texture2D" uid="uid://c68n5udukx1f3" path="res://Sunny-land-files/Graphical Assets/spritesheets/frog-idle.png" id="3_0ew2b"]
[ext_resource type="Texture2D" uid="uid://p0fvlvr4jmqo" path="res://Sunny-land-files/Graphical Assets/spritesheets/frog-jump.png" id="4_ksxu4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lojt8"]
radius = 9.0

[sub_resource type="AtlasTexture" id="AtlasTexture_qiwy2"]
atlas = ExtResource("2_wuod7")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_emrp6"]
atlas = ExtResource("2_wuod7")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v3v1"]
atlas = ExtResource("2_wuod7")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0vqx"]
atlas = ExtResource("2_wuod7")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_vagqq"]
atlas = ExtResource("2_wuod7")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbl0b"]
atlas = ExtResource("2_wuod7")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek3kk"]
atlas = ExtResource("3_0ew2b")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_425gb"]
atlas = ExtResource("3_0ew2b")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dt84"]
atlas = ExtResource("3_0ew2b")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnpa2"]
atlas = ExtResource("3_0ew2b")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vplar"]
atlas = ExtResource("4_ksxu4")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_glfsl"]
atlas = ExtResource("4_ksxu4")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqiev"]
atlas = ExtResource("4_ksxu4")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xpqnp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiwy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emrp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v3v1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0vqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vagqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbl0b")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek3kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_425gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dt84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnpa2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek3kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek3kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek3kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek3kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek3kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek3kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek3kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek3kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek3kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek3kk")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vplar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glfsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqiev")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5cjkl"]
size = Vector2(9.50006, 26.125)

[sub_resource type="CircleShape2D" id="CircleShape2D_3kfs8"]
radius = 131.004

[sub_resource type="RectangleShape2D" id="RectangleShape2D_47x88"]
size = Vector2(25.75, 9.875)

[node name="Frog" type="CharacterBody2D"]
scale = Vector2(14.8286, 16.6326)
script = ExtResource("1_51yxo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -9)
rotation = -1.56907
shape = SubResource("CircleShape2D_lojt8")

[node name="AnimateSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -11)
sprite_frames = SubResource("SpriteFrames_xpqnp")
animation = &"Idle"

[node name="PlayerDeath" type="Area2D" parent="."]
metadata/Death = true

[node name="PlayerDeath" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(0.937497, -4.25002)
rotation = 1.5708
shape = SubResource("RectangleShape2D_5cjkl")

[node name="Player Detection" type="Area2D" parent="."]
scale = Vector2(0.325625, 0.261691)

[node name="Playerdetection" type="CollisionShape2D" parent="Player Detection"]
shape = SubResource("CircleShape2D_3kfs8")

[node name="Area2D" type="Area2D" parent="."]
metadata/Death = false

[node name="Enemydeath" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.875, -14.0625)
shape = SubResource("RectangleShape2D_47x88")

[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
[connection signal="body_entered" from="Player Detection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="Player Detection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
